--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap");
+html,
+body {
+  font-family: "Noto Sans KR", sans-serif;
+  /* height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: blue; */
+}
+
 .App {
-  text-align: center;
+  height: 1000px;
+  /* height: 100%; */
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* 
+.App {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+} */
