--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -2,12 +2,14 @@ table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  text-align: center;
+  /* overflow-x: auto; */
 }
 
 table td,
 table th {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 3px;
 }
 
 table tr:nth-child(even) {
